<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/user_portrait"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_person_black_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.lfork.blogsystem.base.widget.MarqueeTextView
        style="@style/username_marquee_text"
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:text="@string/username"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/user_portrait"
        app:layout_constraintEnd_toStartOf="@+id/btn_follow"
        app:layout_constraintStart_toEndOf="@+id/user_portrait"
        app:layout_constraintTop_toTopOf="@+id/user_portrait" />

    <TextView
        android:id="@+id/user_info_tips"
        android:layout_width="0dp"
        android:singleLine="true"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/view_or_edit_personal_information"
        app:layout_constraintEnd_toStartOf="@+id/btn_follow"
        app:layout_constraintStart_toStartOf="@+id/username"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <Button
        android:id="@+id/btn_follow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/followed"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@+id/user_portrait"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/user_portrait" />

</android.support.constraint.ConstraintLayout>