<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.lfork.blogsystem.main.my.MyViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        tools:context=".main.my.MyFragment">



        <ImageView
            android:id="@+id/user_portrait"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/ic_person_black_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/username_or_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="32dp"
            tools:text="@string/click_to_sign_in"
            android:text="@={viewmodel.nickname}"
            android:textColor="@color/colorPrimary"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="@+id/user_portrait"
            app:layout_constraintStart_toEndOf="@+id/user_portrait"
            app:layout_constraintTop_toTopOf="@+id/user_portrait" />

        <TextView
            android:id="@+id/user_info_tips"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/view_or_edit_personal_information"
            app:layout_constraintEnd_toEndOf="@+id/username_or_sign_in"
            app:layout_constraintStart_toStartOf="@+id/username_or_sign_in"
            app:layout_constraintTop_toBottomOf="@+id/username_or_sign_in" />

        <TextView
            android:id="@+id/following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/following_test"
            app:layout_constraintStart_toStartOf="@+id/user_portrait"
            app:layout_constraintTop_toBottomOf="@+id/user_portrait"
            tools:text="100\nfollowing" />

        <TextView
            android:id="@+id/followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/followers_test"
            app:layout_constraintBaseline_toBaselineOf="@+id/following"
            app:layout_constraintStart_toEndOf="@+id/following"
            tools:text="500\nfollowers" />

        <TextView
            android:id="@+id/words_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/word_count_test"
            app:layout_constraintBaseline_toBaselineOf="@+id/followers"
            app:layout_constraintStart_toEndOf="@+id/followers"
            tools:text="9000\nword count" />


        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/following">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:layout_width="match_parent"
                    android:id="@+id/item_my_articles"
                    android:layout_height="50dp">

                    <TextView
                        android:id="@+id/btn_my_articles"
                        style="@style/title_h1"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_marginStart="24dp"
                        android:text="@string/my_articles"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/my_articles_tips"
                        style="@style/sub_title_h1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/imageView2"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="TextView" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_arrow_right_gray_24dp"
                        tools:ignore="ContentDescription" />


                </android.support.constraint.ConstraintLayout>

                <include layout="@layout/item_horizontal_line" />

                <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:layout_width="match_parent"
                    android:id="@+id/item_star_like"
                    android:layout_height="50dp">

                    <TextView
                        android:id="@+id/btn_stars"
                        style="@style/title_h1"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_marginStart="24dp"
                        android:text="@string/stars_likes"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/stars_tips"
                        style="@style/sub_title_h1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/imageView3"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="TextView" />

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_arrow_right_gray_24dp"
                        tools:ignore="ContentDescription" />


                </android.support.constraint.ConstraintLayout>

                <include layout="@layout/item_separator_bar" />

                <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:layout_width="match_parent"
                    android:id="@+id/item_settings"
                    android:layout_height="50dp">

                    <TextView
                        android:id="@+id/btn_settings"
                        style="@style/title_h1"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_marginStart="24dp"
                        android:text="@string/settings"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/settings_tips"
                        style="@style/sub_title_h1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/imageView5"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="TextView" />

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_arrow_right_gray_24dp"
                        tools:ignore="ContentDescription" />


                </android.support.constraint.ConstraintLayout>


                <include layout="@layout/item_horizontal_line" />

                <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:layout_width="match_parent"
                    android:id="@+id/item_help_feedback"
                    android:layout_height="50dp">

                    <TextView
                        android:id="@+id/btn_help_feedback"
                        style="@style/title_h1"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_marginStart="24dp"
                        android:text="@string/help_and_feedback"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/help_feedback_tips"
                        style="@style/sub_title_h1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/imageView4"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="TextView" />

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_arrow_right_gray_24dp"
                        tools:ignore="ContentDescription" />


                </android.support.constraint.ConstraintLayout>

                <include layout="@layout/item_separator_bar" />

            </LinearLayout>

        </ScrollView>

    </android.support.constraint.ConstraintLayout>

</layout>
